june and july chatstats

--- a/stats/index.html
+++ b/stats/index.html
@@ -12,113 +12,63 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>May 2024</h1>
-<img src="../assets/may24.png" alt="Chart Unavailable"/>
+	<h1>July 2024</h1>
+	<a href="archive/jun24.html"><strong>See June 2024 Stats here</strong></a>
+<img src="../assets/jul24.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
-	<h4><a href="event/3yearani.html">The stats below include the 3 year anniversary subathon chatstats. Click here to see those statistics seperately</a></h4>
 <ol>
-<li>OfficiallySp: 912 messages</li>
-<li>Phantomspower: 890 messages</li>
-<li>Streamlabs: 880 messages</li>
-<li>ItsChrisyBaby: 783 messages</li>
-<li>kotaro_123456: 701 messages</li>
-<li>actiivxteee: 580 messages</li>
-<li>shyuwugirl: 564 messages</li>
-<li>ObliviosaOfficial: 533 messages</li>
-<li>Knight1y: 499 messages</li>
-<li>AKIBA212: 482 messages</li>
-<li>FaTtYShOw: 476 messages</li>
-<li>minoarno: 384 messages</li>
-<li>LowlifePrincessx: 372 messages</li>
-<li>AngleGabriel__: 369 messages</li>
-<li>VelvetGeisha: 329 messages</li>
-<li>extremedolphins: 307 messages</li>
-<li>MrXadion: 301 messages</li>
-<li>Buildingbob345: 290 messages</li>
-<li>OSFrog: 285 messages</li>
-<li>RD07x__: 243 messages</li>
-<li>CezarNorge: 242 messages</li>
-<li>TheOneAndOnlyDo_: 239 messages</li>
-<li>WizeBot: 217 messages</li>
-<li>Nightbot: 216 messages</li>
-<li>starstruck: 188 messages</li>
-<li>Habuzaki: 184 messages</li>
-<li>PrizeGottiGaming: 181 messages</li>
-<li>emilauss: 178 messages</li>
-<li>Magiic_Carpet: 164 messages</li>
-<li>remskz: 152 messages</li>
-<li>alericocoooo: 149 messages</li>
-<li>Rhyer25: 138 messages</li>
-<li>The_VGC: 120 messages</li>
-<li>cLubTubeOfficial and xko987: 107 messages each</li>
-<li>soussoukem and StreamElements: 104 messages each</li>
-<li>PandiPeruvi and AlexVonPog: 100 messages each</li>
-<li>defeatss: 85 messages</li>
-<li>Bulbathulu: 84 messages</li>
-<li>BigDog_Q: 80 messages</li>
-<li>oemsked: 79 messages</li>
-<li>demon_cricketer: 78 messages</li>
-<li>sammziee: 76 messages</li>
-<li>nicojvger: 73 messages</li>
-<li>chiefbeef1234: 71 messages</li>
-<li>SirJester2: 69 messages</li>
-<li>Theonemanny: 63 messages</li>
-<li>Tjorbjorn: 62 messages</li>
-<li>PlayWithViewersBot and YellowFlashA9: 59 messages each</li>
-<li>bigsmoke111tupac, MaicoMolo and NorbyDecibel: 57 messages each</li>
-<li>Danogtt: 56 messages</li>
-<li>MoonlitAly: 52 messages</li>
-<li>radcakez and crovvttv: 48 messages each</li>
-<li>SpacedGodEis: 46 messages</li>
-<li>xxdeathmemexx364: 45 messages</li>
-<li>Renths: 43 messages</li>
-<li>LionelNessie_ and NeoryZz: 39 messages each</li>
-<li>Blackl0ud: 38 messages</li>
-<li>borednbothered: 37 messages</li>
-<li>itzrezz12: 34 messages</li>
-<li>justice2k1_ and ChiSkillz: 33 messages each</li>
-<li>firesaffron: 31 messages</li>
-<li>Furido_ and whispererPengu: 30 messages each</li>
-<li>Thicc_Loaf: 29 messages</li>
-<li>transloucent_: 28 messages</li>
-<li>toxic_fusions1: 27 messages</li>
-<li>wraspie, i_ThatOneGuy and alone_in_the_dark_bartek3: 26 messages each</li>
-<li>wenbee_ and magic_GR74: 25 messages each</li>
-<li>Lilde3on and gutentagwiegehtes: 24 messages each</li>
-<li>makiftw, FeiTFR and Trepko: 23 messages each</li>
-<li>felix_ets_: 22 messages</li>
-<li>WilliamPoggers and AYoACrow: 21 messages each</li>
-<li>KingCobraDK, MagnoliaBobatry, Kentagiouz and JumpFartSniff: 20 messages each</li>
-<li>ysavibe, c0llinc0bra, saf1 and burtly: 19 messages each</li>
-<li>Seycross and FleurDeLocean: 18 messages each</li>
-<li>BigBangRay and justloliehh: 17 messages each</li>
-<li>lingleebao: 16 messages</li>
-<li>ayvottv, WirtyDords92, Colibrine and DrDerpalot: 15 messages each</li>
-<li>LArcZekai and Irratix: 14 messages each</li>
-<li>edu2002pa, hugedissapointment, TheArtOfMat, IcyUK, brianstar90, YuriNationssssss and Fossabot: 13 messages each</li>
-<li>Daeye, Bianclana, BeaniesbroPoE, JustSknow and shi_lo: 12 messages each</li>
-<li>Paulochon_12, K9s_NA and twotwo_o99: 11 messages each</li>
-<li>cresendomoon, thetanpineapple, FireviperHS and destroyerjaan: 10 messages each</li>
-<li>MisterYashi, Robinio, Bogusdonuts, ShadowOfEnki, Im_Salamander and bander_fg: 9 messages each</li>
-<li>whnheavenbreaks, GanonGorb, TheRealMrHaXx, AceUlquiorra, why_000, ograven1, bytesizes, Nymphaliia and fireviperow: 8 messages each</li>
-<li>ImNasusMain, willzystreams, ram13085, VaIerieex, cgabrielthefirst, Habutoo, AttemptHouse, mikey522839, jessegaming173, andinis, Dordin, robbiehammo99 and fresh_yellowsnow: 7 messages each</li>
-<li>J4C0B_F1RY, deadkid54, Janooobi, johnaxemen, PoetTreeTV, solkian, coupleofstickers, Neidorii, Doctor_Love, bigdaddyrikes, Ateest, WOODARD_CHUCKLESON, egirlw0lf56, H31K4L and mercury015: 6 messages each</li>
-<li>kotaro_12345, TheRealBlankk, CaptainErasmusStorm, grga_aka_chefmorde, MeshThaa, HappyAxedents, omnitempest, Void_XM147, NymueKitty, Denjiiio, RogueJelly2, Sublime, Omarpapajo, fetchthepony, jtdyaniforest, CalcinhaDaMargarida, seajayde, finn171047 and escaargot: 5 messages each</li>
-<li>ShadySceptile88, saxash07, Valojuer, DinoDisaster, Arhil120, Excalamity, asurikae, Garbdog, xx_geralt_xx, Valh1r_, CaptainGrosCheh, Xylais, JDGhosted, entropydreams, Lavs_Died, OKAYBLAST, crypttonn, 木精灵, Plamenov, CruceA, aclcgrimreever, Hiiro_06, theclawsaremine and yangsunny: 4 messages each</li>
-<li>Best_Gameplay4444, melon_minnio_, phoso_fish, crazy_bro_athene, xxpoohdaddyxx, cocofish41, hongdingus, BattleBunnyVayne, ScoobyMods, yvriienova, Housni_02, DJFrankieB, SnazzyNeonKoala, NoVaCk_3893, greebot4000, MrSkullzer and prissynicky: 3 messages each</li>
-<li>SCT_samurai, UTKARSH__1, KingCopes, harvestmymorgussy, spacewaveTV, surajquantum, HolySaint_X, TwitchRin, kingnumbgd, facetickles, goksenarda, ShauncastGaming, atomik_sky62, S1ege79, colibrine_2, Coldsidedpillows, Nanospaggle, swagpoopie, XervierYo, ItsMeHilaal, fleurtje_x, miiiksss, alwayspoppin3, keyon45c, ragnarssr, dannfer317, wagadoogey, patspinky, TheeHuntMusic, 1whocares, sttino21, EnigmaXVI, jacobabyisbestbeardyboi, miggymimosa, rafmaster12c, importedjesus, notalexvonpog and keandre094: 2 messages each</li>
-<li>evanthepeepo, nutartine, Achmadeus, fad3dprincess, CotayBay, K48U70, heyjoe4270, sKariXIII, Placid4U, catnisskat, SoundAlerts, NameWithLetters, samsonite012, Aimbotmxrtin, canand2510, Binkiewink, Vegeta100, gagsrus, Swuzzle, jmjanu, SENSHI_OzoSelmer, teeeda, theonewhy, Phytos11, cammain, IAmNotAfk, nabadazz, nkmd_, mettee_, ToxicSecretS, jommgart, Tsunderei, innasolo, Exzenterr, 0xRoM, OpiumPhoenix, yasarsalih06, JeremElShonen, notieyoudie, kittykitsche, NatesNoods, ElMundoDeHades, crabler, ArgentAglets, AndryelWolf, 俺的名字就叫彦, DakotaPNW, banjo_pancake, Oraclethegr8, farcry111, benbukafaylaneyapacagim, M_Cloven, valismid, riseshin3, EndlessRiver1, yourloveablecustard, HeyItsAnn_, SwedenOfficial, sjavdkdvshdv and Bioclip: 1 messages each</li>
+<li>Phantomspower: 268 messages</li>
+<li>shyuwugirl: 222 messages</li>
+<li>FelithaGG: 190 messages</li>
+<li>OfficiallySp: 177 messages</li>
+<li>minoarno: 160 messages</li>
+<li>ObliviosaOfficial: 157 messages</li>
+<li>Streamlabs: 155 messages</li>
+<li>kotaro_123456: 124 messages</li>
+<li>AKIBA212: 123 messages</li>
+<li>alericocoooo: 94 messages</li>
+<li>OSFrog: 79 messages</li>
+<li>TheOneAndOnlyDo_: 77 messages</li>
+<li>ItsChrisyBaby: 56 messages</li>
+<li>FaTtYShOw: 49 messages</li>
+<li>LowlifePrincessx and Genghiss: 45 messages each</li>
+<li>Knight1y: 40 messages</li>
+<li>oemsked: 37 messages</li>
+<li>MaicoMolo: 35 messages</li>
+<li>thetanpineapple: 33 messages</li>
+<li>Nightbot: 31 messages</li>
+<li>vistatam: 29 messages</li>
+<li>Buildingbob345 and xKanbar: 28 messages each</li>
+<li>shyy_lo: 25 messages</li>
+<li>WilliamPoggers: 23 messages</li>
+<li>Theonemanny: 21 messages</li>
+<li>kvolvoog909 and JDGhosted: 19 messages each</li>
+<li>NeoryZz, AlexVonPog and TheRealMrHaXx: 16 messages each</li>
+<li>Bianclana and NorbyDecibel: 15 messages each</li>
+<li>Denjiiio and steffe2000: 14 messages each</li>
+<li>andinis, SirJester2 and StreamElements: 13 messages each</li>
+<li>D_W_James, bqbee and justice2k1_: 12 messages each</li>
+<li>yasuo_the_feeder, toxic_fusions1 and OKAYBLAST: 11 messages each</li>
+<li>sttino21, kittykitsche and gutentagwiegehtes: 10 messages each</li>
+<li>soussoukem, LionelNessie_, Cloud_Original, ManonLaSombre, imperialninja and Sublime: 9 messages each</li>
+<li>YellowFlashA9, emilauss, dav1donair and NikNakzZ: 8 messages each</li>
+<li>twotwo_o99, telegraaf, BigDog_Q, FeiTFR and sammziee: 7 messages each</li>
+<li>Rhyer25 and Trepko: 6 messages each</li>
+<li>Blackl0ud, PreCosmos, AttemptHouse, notieyoudie, damaggeeeeee and VelvetGeisha: 5 messages each</li>
+<li>giidiibiidii, Mosrix, chiefbeef1234, ArkhamJinx, Dragon_of_Spades, SonglistBot, PlayWithViewersBot, heyjoe4270, crovvttv and Mr__Swagger: 4 messages each</li>
+<li>alexkadison, borednbothered, firesaffron, cookieman4life, Habuzaki, droupy27, PrizeGottiGaming, PandiPeruvi and transloucent_: 3 messages each</li>
+<li>alone_in_the_dark_bartek3, XervierYo, rafmaster12c, Laeriis and deadkid54: 2 messages each</li>
+<li>HolySaint_X, theclawsaremine, natsusamo, TheJukus, Snikingen, LuCiuZ_, ChefCurryGames, bumbleb33zzz, makiftw, GragasBalls, BattleBunnyVayne, kiavashdavoodi, Nymphaliia, ChiSkillz, Seycross, FleurDeLocean, aclcgrimreever, pisces_in_crysis, ToxicSecretS, MidnightLunaRose, Sevs_HD, mysticginge, malhiluvu, wolf_lass, butterick, KingCobraDK and potatosephiroth: 1 messages each</li>
 </ol>
 </div>
 </div>
-<h4>16593 Total messages Logged from 327 Chat Participants Over 12 Streams</h4>
+<h4>2900 Total messages Logged from 122 Chat Participants Over 4 Streams (4 datapoints)</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
     </footer>
-index
 </body>
 </html>
