--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -2,25 +2,6 @@
 <nav>
 <div class="header">
         <h1>Obliviosa Chatstats</h1>
-		<div id="timer">
-          <p>Next update in:</p>
-            <div class="time-unit">
-                <span id="days"></span>
-                <p class="time-label">Days</p>
-            </div>
-            <div class="time-unit">
-                <span id="hours"></span>
-                <p class="time-label">Hours</p>
-            </div>
-            <div class="time-unit">
-                <span id="minutes"></span>
-                <p class="time-label">Minutes</p>
-            </div>
-            <div class="time-unit">
-                <span id="seconds"></span>
-                <p class="time-label">Seconds</p>
-            </div>
-        </div>
         <div class="navbar">
             <div class="dropdown">
                 <a href="/stats/index.html">Latest</a>
@@ -28,6 +9,8 @@
             <div class="dropdown">
                 <a href="#archive">Archives</a>
                 <div class="dropdown-content">
+                    <a href="/stats/archive/jul24.html">July 2024</a>
+                    <a href="/stats/archive/jun24.html">June 2024</a>
 					<a href="/stats/archive/may24.html">May 2024</a>
 					<a href="/stats/archive/apr24.html">April 2024</a>
 					<a href="/stats/archive/mar24.html">March 2024</a>
