fixed a few things

--- a/stats/event/ss2023.html
+++ b/stats/event/ss2023.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="navbar-placeholder"></div>
 	<h1>Obliviosa Subathon (September 2023)</h1>
-    <img src="../../assets/livsubathonchat.png" alt="Chart Unavailable" />
+    <img src="../../assets/subtember23.png" alt="Chart Unavailable" />
     <p>Chart showing first 50 users. additional users are counted but displayed below in detail.</p>
     <h2>Detailed chat stats</h2>
     <p>Channel Mods are marked as <strong>bold</strong>. Bots are <em>italicised</em></p>
