--- a/recap/index.html
+++ b/recap/index.html
@@ -38,54 +38,30 @@
             <div id="chatter-list"></div>
         </section>
 
-        <section id="media-highlights" class="section">
-            <h2>Media Highlights</h2>
-            <div class="media-container">
-                <div class="media-item">
-                    <img src="highlight1.jpg" alt="Highlight 1">
-                </div>
-                <div class="media-item">
-                    <video src="highlight2.mp4" controls></video>
-                </div>
-                <!-- Add more media items as needed -->
-            </div>
-        </section>
-
-        <section id="word-cloud" class="section">
-            <h2>Most Used Words</h2>
-            <div id="word-cloud-container"></div>
-        </section>
-
         <section id="chat-insights" class="section">
             <h2>Chat Insights</h2>
             <div class="insights-container">
                 <div class="insight-item" id="avgMessagesPerStream">
-                    <div class="insight-circle"></div>
                     <h3>Avg. Messages per Stream</h3>
                     <p class="insight-value">0</p>
                 </div>
                 <div class="insight-item" id="longestMessage">
-                    <div class="insight-circle"></div>
                     <h3>Longest Message</h3>
                     <p class="insight-value">0 characters</p>
                 </div>
                 <div class="insight-item" id="busiesHour">
-                    <div class="insight-circle"></div>
                     <h3>Busiest Hour</h3>
                     <p class="insight-value">00:00</p>
                 </div>
                 <div class="insight-item" id="mostActiveDay">
-                    <div class="insight-circle"></div>
                     <h3>Most Active Day</h3>
                     <p class="insight-value">Monday</p>
                 </div>
                 <div class="insight-item" id="lateStream">
-                    <div class="insight-circle"></div>
                     <h3>Liv has been late to stream</h3>
                     <p class="insight-value">12 Times this year</p>
                 </div>
                 <div class="insight-item" id="timesLivCalledShort">
-                    <div class="insight-circle"></div>
                     <h3>Times liv has been called short</h3>
                     <p class="insight-value">164</p>
                 </div>
@@ -111,21 +87,23 @@
             <h2>Stream Milestones</h2>
             <div id="milestone-list"></div>
         </section>
-
-        <section id="highlights" class="section">
-            <h2>Year Highlights</h2>
-            <div class="highlight-container">
-                <!-- Add highlight items here -->
+        
+        <section id="media-highlights" class="section">
+            <h2>Achoo!!!</h2>
+            <div class="media-container">
+                <div class="media-item">
+                    <video src="highlight1.mp4" controls></video>
+                </div>
+                <div class="media-item">
+                    <video src="highlight2.mp4" controls></video>
+                </div>
+                <!-- Add more media items as needed -->
             </div>
         </section>
-    </main>
-
     <footer>
         <p>Thank you for an amazing year of chats and streams!</p>
-        <p>© 2023 Obliviosa. All rights reserved.</p>
+        <p>© 2024 Shane Pepperell (OfficiallySp)</p>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
