--- a/recap/index.html
+++ b/recap/index.html
@@ -7,13 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <div id="particles-js"></div>
 
     <header>
         <div class="animated-bg"></div>
@@ -33,7 +30,7 @@
         </section>
 
         <section id="top-chatters" class="section">
-            <h2>Top Chatters over 1000 Messages</h2>
+            <h2>Top Chatters over 1k Messages</h2>
             <h3>You guys rock</h3>
             <div id="chatter-list"></div>
         </section>
@@ -62,7 +59,7 @@
                     <p class="insight-value">12 Times this year</p>
                 </div>
                 <div class="insight-item" id="timesLivCalledShort">
-                    <h3>Times liv has been called short</h3>
+                    <h3>Times Liv has been called short</h3>
                     <p class="insight-value">164</p>
                 </div>
             </div>
@@ -73,12 +70,24 @@
             <div id="emote-list"></div>
         </section>
 
-        <section id="unique-chatters" class="section">
-            <h2>Community Growth</h2>
-            <div class="stat-container">
-                <div class="stat">
-                    <span class="number" id="uniqueChatters">0</span>
-                    <span class="label">Unique Chatters</span>
+        <section id="timeline" class="section">
+            <h2>Memorable Moments</h2>
+            <div class="timeline-wrapper">
+                <div class="timeline-container"></div>
+            </div>
+        </section>
+        
+        <section id="media-highlights" class="section">
+            <h2>Achoo!!!</h2>
+            <div class="media-container">
+                <div class="media-item">
+                    <video src="/recap/assets/sneeze1.mp4" controls></video>
+                </div>
+                <div class="media-item">
+                    <video src="/recap/assets/sneeze2.mp4" controls></video>
+                </div>
+                <div class="media-item">
+                    <video src="/recap/assets/sneeze3.mp4" controls></video>
                 </div>
             </div>
         </section>
@@ -87,23 +96,14 @@
             <h2>Stream Milestones</h2>
             <div id="milestone-list"></div>
         </section>
-        
-        <section id="media-highlights" class="section">
-            <h2>Achoo!!!</h2>
-            <div class="media-container">
-                <div class="media-item">
-                    <video src="highlight1.mp4" controls></video>
-                </div>
-                <div class="media-item">
-                    <video src="highlight2.mp4" controls></video>
-                </div>
-                <!-- Add more media items as needed -->
-            </div>
-        </section>
+
     <footer>
         <p>Thank you for an amazing year of chats and streams!</p>
-        <p>© 2024 Shane Pepperell (OfficiallySp)</p>
+        <p>© MMXXIV Obliviosa</p>
     </footer>
+    <button id="scrollToTop" aria-label="Scroll to top">↑</button>
     <script src="main.js"></script>
+
+</main>
 </body>
 </html>
