--- a/recap/index.html
+++ b/recap/index.html
@@ -33,13 +33,14 @@
             <h2>Top Chatters over 1k Messages</h2>
             <h3>You guys rock</h3>
             <div id="chatter-list"></div>
+            <img src="/recap/assets/top_users.png" width="100%" alt="Top Chatters">
         </section>
 
         <section id="chat-insights" class="section">
             <h2>Chat Insights</h2>
             <div class="insights-container">
                 <div class="insight-item" id="avgMessagesPerStream">
-                    <h3>Avg. Messages per Stream</h3>
+                    <h3>Messages Sent this year</h3>
                     <p class="insight-value">0</p>
                 </div>
                 <div class="insight-item" id="longestMessage">
@@ -47,8 +48,8 @@
                     <p class="insight-value">0 characters</p>
                 </div>
                 <div class="insight-item" id="busiesHour">
-                    <h3>Busiest Hour</h3>
-                    <p class="insight-value">00:00</p>
+                    <h3>Total chat participants</h3>
+                    <p class="insight-value">1250</p>
                 </div>
                 <div class="insight-item" id="mostActiveDay">
                     <h3>Most Active Day</h3>
@@ -63,18 +64,12 @@
                     <p class="insight-value">164</p>
                 </div>
             </div>
+            <img src="/recap/assets/top_words.png" width="100%" alt="Top Words">
         </section>
 
         <section id="emote-stats" class="section">
             <h2>Most Used Emotes</h2>
             <div id="emote-list"></div>
-        </section>
-
-        <section id="timeline" class="section">
-            <h2>Memorable Moments</h2>
-            <div class="timeline-wrapper">
-                <div class="timeline-container"></div>
-            </div>
         </section>
         
         <section id="media-highlights" class="section">
@@ -88,6 +83,9 @@
                 </div>
                 <div class="media-item">
                     <video src="/recap/assets/sneeze3.mp4" controls></video>
+                </div>
+                <div class="media-item">
+                    <video src="/recap/assets/sneeze4.mp4" controls></video>
                 </div>
             </div>
         </section>
