--- a/stats/index.html
+++ b/stats/index.html
@@ -34,85 +34,24 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>August 2024</h1>
-<img src="../assets/aug24.png" alt="Chart Unavailable"/>
+	<h1>September 2024</h1>
+<img src="../assets/sep24.png" alt="Chart Unavailable"/>
 <div class="container">
 	<div class="chat-stats">
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-    <li>OfficiallySp: 652 messages</li>
-    <li>Phantomspower: 482 messages</li>
-    <li>AngleGabriel__: 460 messages</li>
-    <li>ItsChrisyBaby: 450 messages</li>
-    <li>Streamlabs: 330 messages</li>
-    <li>kotaro_123456: 298 messages</li>
-    <li>shyuwugirl: 278 messages</li>
-    <li>TheOneAndOnlyDo_: 256 messages</li>
-    <li>OSFrog: 208 messages</li>
-    <li>ObliviosaOfficial: 180 messages</li>
-    <li>alericocoooo: 173 messages</li>
-    <li>SirJester2: 134 messages</li>
-    <li>MrXadion: 132 messages</li>
-    <li>FaTtYShOw: 130 messages</li>
-    <li>Genghiss: 114 messages</li>
-    <li>FelithaGG: 112 messages</li>
-    <li>Knight1y: 105 messages</li>
-    <li>Nightbot and RD07x__: 95 messages each</li>
-    <li>foxdrop: 88 messages</li>
-    <li>umeett: 68 messages</li>
-    <li>suuuuuca: 65 messages</li>
-    <li>Buildingbob345: 57 messages</li>
-    <li>MindWaveGG: 56 messages</li>
-    <li>hulk_rogan: 54 messages</li>
-    <li>minoarno: 52 messages</li>
-    <li>DangerDeal and MaicoMolo: 49 messages each</li>
-    <li>ZsoltiiB: 48 messages</li>
-    <li>PlayWithViewersBot: 47 messages</li>
-    <li>StreamElements, LionelNessie_ and chiefbeef1234: 45 messages each</li>
-    <li>AKIBA212 and Habuzaki: 44 messages each</li>
-    <li>vistatam: 38 messages</li>
-    <li>TheRealMrHaXx: 37 messages</li>
-    <li>willzystreams: 36 messages</li>
-    <li>sttino21: 32 messages</li>
-    <li>ASlyMagpie, LowlifePrincessx and TheNimbrod: 28 messages each</li>
-    <li>FeiTFR and SCT_samurai: 27 messages each</li>
-    <li>damaggeeeeee: 26 messages</li>
-    <li>MagnoliaBobatry and NACHOholic: 25 messages each</li>
-    <li>Dordin: 24 messages</li>
-    <li>Rhyer25: 23 messages</li>
-    <li>KingCobraDK and Bianclana: 22 messages each</li>
-    <li>Thicc_Loaf and LiaAnnie: 21 messages each</li>
-    <li>Siem333: 20 messages</li>
-    <li>ogkushx and pskthresh: 19 messages each</li>
-    <li>oemsked and V1perino: 18 messages each</li>
-    <li>Swordcatcher, OKAYBLAST, sammziee, Nymphaliia and borednbothered: 17 messages each</li>
-    <li>Trepko, notieyoudie, PandiPeruvi and thetanpineapple: 16 messages each</li>
-    <li>ograven1, ayvottv and crovvttv: 15 messages each</li>
-    <li>NoVaCk_3893, Jaloyoloti, RobbenDaMan and emilauss: 14 messages each</li>
-    <li>edu2002pa, firesaffron, cryptokrill, WirtyDords92, creamcheesebagelboy, widdleliliana, annaccnt, xxpoohdaddyxx and lightriver29: 13 messages each</li>
-    <li>fichipaldi, reedtrullz, SpicyPiquant and itzrezz12: 12 messages each</li>
-    <li>Neidorii and Sublime: 11 messages each</li>
-    <li>YellowFlashA9, toxic_fusions1, JeremElShonen and ghostgirlstorm: 10 messages each</li>
-    <li>CezarNorge, Void_XM147, andinis, und3adgam3rs, ogawa223 and cranken21: 9 messages each</li>
-    <li>kvolvoog909, aclcgrimreever, Kugelblitz, soussoukem, Denjiiio, HikiN3ETaku, TheJukus, telegraaf, Jallabinn, Peh_teh and nikolamp3_1502: 8 messages each</li>
-    <li>Magiic_Carpet, jommgart, MizuMark, asurikae and justloliehh: 7 messages each</li>
-    <li>bqbee, emikoyoi, SakinKusok, FlashLikeAdobe, murderbirdexpress, kotaro_12345 and BigDog_Q: 6 messages each</li>
-    <li>mylilpeter, DJFrankieB, elle_ocean_, Janooobi, xxblueshellxx, carbon1379, saiefe and Plamenov: 5 messages each</li>
-    <li>imperialninja, nutartine, Unishaggy, abdusselam93, Cloud_Original, your_ex69, Tekenis_, Shiiro_JK, twotwo_o99 and AmethystAbrams: 4 messages each</li>
-    <li>nanon12, TwitchRin, Cerberus6320, Tzephkiel, GullibleCoconut, The_VGC, kingvon_42069, Jazzoholic, BigTiddyGoff_, burtly, heyjoe4270 and catnisskat: 3 messages each</li>
-    <li>ThatFiddle, SonglistBot, NeoryZz, trolldedyshko, designerskyline_, SFAmiler, ChiSkillz, foxdrops_fangrill, iOverDesign, Honkilisk, Tilch, yasuo_the_feeder, natsusamo, imwetboi___, being_cool, Danogtt, Fossabot, AceUlquiorra, justinthemusician and Solissfoon: 2 messages each</li>
-    <li>captaine__fox, WOODARD_CHUCKLESON, cuckdaniel, ToxicSecretS, rafmaster12c, ownyourAssinator, Falauren, BattleBunnyVayne, 4skin115, xcaliber600, WholeDangSheBang, krachunz, Locky_TheLittleViking, homlesstramp, ayhamli, SheerlckHolmes, PurpleRein, dali_khe, LavKraljova, papacarapuce and Tjorbjorn: 1 messages each</li>
+
     </ol>
 </div>
 </div>
-<h4>6997 Total messages Logged from 193 Chat Participants Over 10 Streams (11 datapoints)</h4>
+<h4>0 Total messages Logged from 0 Chat Participants Over 0 Streams (0 datapoints)</h4>
 
 <!-- temporary floating footer -->
 <div class="floating-footer">
-    <strong>One year later:</strong> A whole year of Obliviosa's Twitch streams have been logged! Check out the recap special @ <a href="https://obliviosa.net/recap">https://obliviosa.net/recap</a>
+     <strong>See you starside!</strong> Chatstats is on hiatus and will not be updated. they will return again in the future.</strong>
     <p></p>
-    <button onclick="window.location.href='https://obliviosa.net/recap'">Go to Recap</button>
+    <button onclick="window.location.href='https://twitch.tv/obliviosaofficial'">Obliviosa on Twitch</button>
 </div>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
