--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -9,6 +9,7 @@
             <div class="dropdown">
                 <a href="#archive">Archives</a>
                 <div class="dropdown-content">
+                    <a href="/stats/archive/sep24.html">September 2024</a>
                     <a href="/stats/archive/aug24.html">August 2024</a>
                     <a href="/stats/archive/jul24.html">July 2024</a>
                     <a href="/stats/archive/jun24.html">June 2024</a>
