--- a/foundation.html
+++ b/foundation.html
@@ -121,7 +121,7 @@
     <section class="hero">
         <div class="container">
             <h2>You can make a difference</h2>
-            <p>Just $10 can help a starving musician today</p>
+            <p>Just one whole pound can help a starving musician today!</p>
             <a href="https://streamlabs.com/obliviosaofficial/tip" class="cta-button">Donate Now</a>
         </div>
     </section>
