--- a/stats/index.html
+++ b/stats/index.html
@@ -49,7 +49,7 @@
 
 <!-- temporary floating footer -->
 <div class="floating-footer">
-     <strong>See you starside!</strong> Chatstats is on hiatus and will not be updated. they will return again in the future.</strong>
+     <strong>We have moved!</strong>chatstats has moved to a new platform. chatstats.live/obliviosa.</strong>
     <p></p>
     <button onclick="window.location.href='https://twitch.tv/obliviosaofficial'">Obliviosa on Twitch</button>
 </div>
