Deprecate chatstats site with migration notice

--- a/stats/index.html
+++ b/stats/index.html
@@ -4,58 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obliviosa Chatstats</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="https://kit.fontawesome.com/6824d55697.js" crossorigin="anonymous"></script>
-    <!-- temporary floating footer -->
+    <title>Chatstats - Deprecation Notice</title>
     <style>
-        .floating-footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #ffcccc;
-            color: #cc0000;
+        body {
+            font-family: Arial, sans-serif;
             text-align: center;
-            padding: 10px;
-            z-index: 1000;
+            margin: 50px auto;
+            max-width: 800px;
+            padding: 20px;
         }
-        .floating-footer button {
-            background-color: #cc0000;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-            margin-left: 10px;
+        .notice {
+            background-color: #fff3cd;
+            border: 1px solid #ffeeba;
+            color: #856404;
+            padding: 20px;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+        .redirect {
+            font-size: 1.2em;
+            margin: 20px 0;
+        }
+        .redirect a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .redirect a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
-<script type="text/javascript" src="main.js"></script>
 <body>
-	<div id="navbar-placeholder"></div>
-	<h1>September 2024</h1>
-<img src="../assets/sep24.png" alt="Chart Unavailable"/>
-<div class="container">
-	<div class="chat-stats">
-<h2>Detailed chat stats</h2>
-    <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
-<ol>
-    <h2>Detailed chat stats are not available for this timeframe</h2>
-    </ol>
-</div>
-</div>
-<h4>0 Total messages Logged from 0 Chat Participants Over 0 Streams (0 datapoints)</h4>
-
-<!-- temporary floating footer -->
-<div class="floating-footer">
-     <strong>See you starside!</strong> Chatstats is on hiatus and will not be updated. they will return again in the future.</strong>
-    <p></p>
-    <button onclick="window.location.href='https://twitch.tv/obliviosaofficial'">Obliviosa on Twitch</button>
-</div>
-    <footer>
-        <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
-        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
-    </footer>
+    <h1>⚠️ Deprecation Notice ⚠️</h1>
+    <div class="notice">
+        <h2>Chatstats has moved!</h2>
+        <p>All chatstats functionality has been moved to:</p>
+        <div class="redirect">
+            <a href="https://chatstats.live/obliviosaobliviosa/obliviosa">chatstats.live/obliviosaobliviosa</a>
+        </div>
+        <p>This site will be permanently deleted on April 1st, 2024.</p>
+        <p>Please update your bookmarks to the new location.</p>
+    </div>
 </body>
 </html>
