--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
-<nav>
-<div class="header">
-        <h1>Obliviosa Chatstats</h1>
-        <div class="navbar">
-            <div class="dropdown">
-                <a href="/stats/index.html">Latest</a>
-            </div>
-            <div class="dropdown">
-                <a href="#archive">Archives</a>
-                <div class="dropdown-content">
-                    <a href="/stats/archive/sep24.html">September 2024</a>
-                    <a href="/stats/archive/aug24.html">August 2024</a>
-                    <a href="/stats/archive/jul24.html">July 2024</a>
-                    <a href="/stats/archive/jun24.html">June 2024</a>
-					<a href="/stats/archive/may24.html">May 2024</a>
-					<a href="/stats/archive/apr24.html">April 2024</a>
-					<a href="/stats/archive/mar24.html">March 2024</a>
-					<a href="/stats/archive/feb24.html">February 2024</a>
-					<a href="/stats/archive/jan24.html">January 2024</a>
-					<a href="/stats/archive/dec23.html">December 2023</a>
-					<a href="/stats/archive/nov23.html">November 2023</a>
-                    <a href="/stats/archive/oct23.html">October 2023</a>
-                    <a href="/stats/archive/sep23.html">September 2023</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="#special-events">Special Events</a>
-                <div class="dropdown-content">
-                    <a href="/stats/event/3yearani.html">3 Year Anniversary Subathon 2024</a>
-                    <a href="/stats/event/ss2023.html">Subtember Subathon 2023</a>
-                </div>
-            </div>
-            <div class="icons">
-                <a href="https://twitch.tv/obliviosaofficial" target="_blank" title="Obliviosa on Twitch">
-                    <i class="fa-brands fa-twitch fa-2x"></i>
-                </a>
-                <a href="https://instagram.com/obliviosaofficial" target="_blank" title="Obliviosa on Instagram">
-                    <i class="fa-brands fa-instagram fa-2x"></i>
-                </a>
-            </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatstats - Deprecation Notice</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px auto;
+            max-width: 800px;
+            padding: 20px;
+        }
+        .notice {
+            background-color: #fff3cd;
+            border: 1px solid #ffeeba;
+            color: #856404;
+            padding: 20px;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+        .redirect {
+            font-size: 1.2em;
+            margin: 20px 0;
+        }
+        .redirect a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .redirect a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>⚠️ Deprecation Notice ⚠️</h1>
+    <div class="notice">
+        <h2>Chatstats has moved!</h2>
+        <p>All chatstats functionality has been moved to:</p>
+        <div class="redirect">
+            <a href="https://chatstats.live/obliviosaobliviosa">chatstats.live</a>
         </div>
+        <p>This site will be permanently deleted on April 1st, 2024.</p>
+        <p>Please update your bookmarks to the new location.</p>
     </div>
-</nav>
+</body>
+</html>
