Remove deprecated chatstats site files

--- a/stats/index.html
+++ b/stats/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,29 +34,15 @@
     </style>
 </head>
 <body>
-	<div id="navbar-placeholder"></div>
-	<h1>September 2024</h1>
-<img src="../assets/sep24.png" alt="Chart Unavailable"/>
-<div class="container">
-	<div class="chat-stats">
-<h2>Detailed chat stats</h2>
-    <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
-<ol>
-    <h2>Detailed chat stats are not available for this timeframe</h2>
-    </ol>
-</div>
-</div>
-<h4>0 Total messages Logged from 0 Chat Participants Over 0 Streams (0 datapoints)</h4>
-
-<!-- temporary floating footer -->
-<div class="floating-footer">
-     <strong>See you starside!</strong> Chatstats is on hiatus and will not be updated. they will return again in the future.</strong>
-    <p></p>
-    <button onclick="window.location.href='https://twitch.tv/obliviosaofficial'">Obliviosa on Twitch</button>
-</div>
-    <footer>
-        <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
-        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023-2024)</p>
-    </footer>
+    <h1>⚠️ Deprecation Notice ⚠️</h1>
+    <div class="notice">
+        <h2>Chatstats has moved!</h2>
+        <p>All chatstats functionality has been moved to:</p>
+        <div class="redirect">
+            <a href="https://chatstats.live/obliviosa">chatstats.live/obliviosa</a>
+        </div>
+        <p>This site will be permanently deleted on April 1st, 2024.</p>
+        <p>Please update your bookmarks to the new location.</p>
+    </div>
 </body>
 </html>
