--- a/tracker.html
+++ b/tracker.html
@@ -88,30 +88,34 @@
 
     <div class="task">
         <h2>Dead Island 2</h2>
-		<h3>IN PROGRESS - ?/? Videos</h3>
+		<h3>6 VODS - ?/? Videos (MISSING)</h3>
         <div class="progress"></div>
+        <div class="none"></div>
+        <div class="none"></div>
+	<div class="none"></div>
         <div class="none"></div>
         <div class="none"></div>
     </div>
     <div class="task">
         <h2>Hollow Knight</h2>
-		<h3>IN PROGRESS - ?/? Videos</h3>
+		<h3>4 VODS (ON HOLD) - ?/? Videos</h3>
+        <div class="none"></div>
+        <div class="none"></div>
+        <div class="none"></div>
         <div class="none"></div>
     </div>
   <div class="task">
         <h2>Stray</h2>
-		<h3>16 VODS - ?/? Videos</h3>
+		<h3>5 VODS - ?/? Videos</h3>
         <div class="progress"></div>
         <div class="none"></div>
         <div class="none"></div>
         <div class="none"></div>
         <div class="none"></div>
-        <div class="none"></div>
-        <div class="none"></div>
-        <div class="none"></div>
-        <div class="none"></div>
-        <div class="none"></div>
-        <div class="none"></div>
+  </div>
+  <div class="task">
+        <h2>Elden Ring</h2>
+		<h3>IN PROGRESS - ?/? Videos</h3>
         <div class="none"></div>
         <div class="none"></div>
         <div class="none"></div>
